--- a/1-FrontEnd/4-react/A - React basico/03-profile-search/src/App.css
+++ b/1-FrontEnd/4-react/A - React basico/03-profile-search/src/App.css
@@ -23,6 +23,8 @@ body {
 }
 
 h1 {
+  display: inline-block;
+  padding: 0.1em 0;
   font-size: 3rem;
   margin-bottom: 40px;
   background: linear-gradient(to right, #a78bfa, #f472b6);
